# configure

./: Makefile.am  README.md  configure.ac
my_dir/: myadd.cpp
src/: Makefile.am  helper.cpp  helper.h  main.cpp
